my-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-dev
  template:
    metadata:
      name: my-app
      labels:
        app: my-dev
    spec:
      containers:
        - name: my-container
          image: nginx
          ports:
            - containerPort: 80
