my-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
spec:
  selector:
    app: name
  type: NodePort # ClusterIP, NodePort, LoadBalancer, ExternalName
  #  sessionAffinity: ClientIP

  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30005
